changed answer textview's layout width and height to wrap content solving error when used for big calculation

--- a/Calculathor/src/main/res/layout/activity_main.xml
+++ b/Calculathor/src/main/res/layout/activity_main.xml
@@ -46,8 +46,8 @@
 
     <TextView
         android:id="@+id/answer"
-        android:layout_width="217dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="324dp"
         android:textColor="#fafafa"
         android:textColorHighlight="#fafafa"
